<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/infoview_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_my_area_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/backgroundDefault" >

            <TextView
                android:id="@+id/my_area_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_area_title"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/info_subtitle"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_subtitle"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/info_layers"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_layers"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/info_cde_description"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/info_cde_description"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="16dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>