<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/info_view_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_info_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:orientation="vertical"
            android:background="@color/backgroundDefault" >

            <TextView
                android:id="@+id/info_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_huge"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/info_description"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_description"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/info_home_buttons"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_home_buttons"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/info_gpsButton"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:src="@drawable/target_white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/info_gpsText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/info_gpsText"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/info_layers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_medium"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_layers"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/info_cde_layer"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="0.80"
                    android:src="@drawable/ic_cde_marker"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/info_cde_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/info_cde_description"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/info_wims_layer"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="0.80"
                    android:src="@drawable/ic_wims_marker"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/info_wims_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/info_wims_description"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/info_image_layer"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="0.80"
                    android:src="@drawable/ic_permit_marker"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/info_image_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/info_permit_description"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/info_subtitle"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_subtitle"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/epimorphics_logo"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/epimorphics_logo"/>

                <ImageView
                    android:id="@+id/uob_logo"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_alignTop="@id/epimorphics_logo"
                    android:layout_toStartOf="@id/epimorphics_logo"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/uob_logo"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>