<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true" >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar_default"
        android:id="@+id/info_view_toolbar">

        <ImageButton
            style="@style/back_button"
            android:id="@+id/back_button_my_area_view"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/backgroundDefault" >

            <TextView
                style="@style/text_view_heading"
                android:id="@+id/my_area_title"
                android:text="@string/my_area_title"
                android:paddingTop="@dimen/layout_base_vertical_padding"/>

            <TableLayout
                style="@style/table_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/my_area_summary_table">
            </TableLayout>

            <TableLayout
                style="@style/table_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/my_area_button_table">

                <TableRow
                    android:id="@+id/my_area_button_row"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        style="@style/big_button"
                        android:id="@+id/my_area_wims_button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:text="@string/my_area_wims_button"
                        android:drawableTop="@drawable/ic_wims_marker"
                        android:contentDescription="@string/my_area_wims_button"/>

                    <Button
                        style="@style/big_button"
                        android:id="@+id/my_area_permit_button"
                        android:text="@string/my_area_permit_button"
                        android:drawableTop="@drawable/ic_permit_marker"
                        android:contentDescription="@string/my_area_permit_button"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>